add_executable(test_framework test_framework.cc)
target_include_directories(test_framework PRIVATE
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/testing
)
add_test(NAME test_framework COMMAND test_framework)
set_tests_properties(test_framework PROPERTIES WILL_FAIL TRUE)

add_executable(test_network test_network.cc)
target_link_libraries(test_network rut_runtime)
target_include_directories(test_network PRIVATE
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/testing
    ${CMAKE_CURRENT_SOURCE_DIR}
)
add_test(NAME test_network COMMAND test_network)
set_tests_properties(test_network PROPERTIES LABELS "unit;network")

find_package(Threads REQUIRED)
find_program(OPENSSL_EXECUTABLE openssl REQUIRED)

set(RUT_TLS_TESTDATA_DIR ${CMAKE_CURRENT_BINARY_DIR}/testdata)
set(RUT_TLS_TEST_CERT ${RUT_TLS_TESTDATA_DIR}/localhost_cert.pem)
set(RUT_TLS_TEST_KEY ${RUT_TLS_TESTDATA_DIR}/localhost_key.pem)

add_custom_command(
    OUTPUT ${RUT_TLS_TEST_CERT} ${RUT_TLS_TEST_KEY}
    COMMAND ${CMAKE_COMMAND} -E make_directory ${RUT_TLS_TESTDATA_DIR}
    COMMAND ${OPENSSL_EXECUTABLE} req -x509 -newkey rsa:2048 -keyout ${RUT_TLS_TEST_KEY} -out ${RUT_TLS_TEST_CERT} -sha256 -nodes -days 1 -subj /CN=localhost
    COMMENT "Generating TLS fixtures for integration tests"
    VERBATIM
)

add_custom_target(test_tls_fixtures DEPENDS ${RUT_TLS_TEST_CERT} ${RUT_TLS_TEST_KEY})

add_executable(test_integration
    test_integration.cc
    epoll_tls_test_hooks.cc
)
target_link_libraries(test_integration
    rut_runtime
    rut_compiler
    rut_jit
    Threads::Threads
    ssl
    crypto
)
target_include_directories(test_integration PRIVATE
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/src/runtime
    ${PROJECT_SOURCE_DIR}/testing
    ${CMAKE_CURRENT_SOURCE_DIR}
)
target_compile_definitions(test_integration PRIVATE
    RUT_TESTDATA_DIR="${RUT_TLS_TESTDATA_DIR}"
)
add_dependencies(test_integration test_tls_fixtures)
add_test(NAME test_integration COMMAND test_integration)
set_tests_properties(test_integration PROPERTIES LABELS "integration;network")

add_executable(test_arena test_arena.cc ${PROJECT_SOURCE_DIR}/src/placement_new.cc)
target_link_libraries(test_arena rut_runtime)
target_include_directories(test_arena PRIVATE
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/testing
)
add_test(NAME test_arena COMMAND test_arena)
set_tests_properties(test_arena PROPERTIES LABELS "unit")

add_executable(test_expected test_expected.cc ${PROJECT_SOURCE_DIR}/src/placement_new.cc)
target_include_directories(test_expected PRIVATE
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/testing
)
add_test(NAME test_expected COMMAND test_expected)
set_tests_properties(test_expected PROPERTIES LABELS "unit")

add_executable(test_http_parser test_http_parser.cc)
target_link_libraries(test_http_parser rut_runtime)
target_include_directories(test_http_parser PRIVATE
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/testing
    ${CMAKE_CURRENT_SOURCE_DIR}
)
add_test(NAME test_http_parser COMMAND test_http_parser)
set_tests_properties(test_http_parser PROPERTIES LABELS "unit")

add_executable(test_chunked_parser test_chunked_parser.cc)
target_link_libraries(test_chunked_parser rut_runtime)
target_include_directories(test_chunked_parser PRIVATE
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/testing
    ${CMAKE_CURRENT_SOURCE_DIR}
)
add_test(NAME test_chunked_parser COMMAND test_chunked_parser)
set_tests_properties(test_chunked_parser PROPERTIES LABELS "unit")

add_executable(test_buffer test_buffer.cc)
target_include_directories(test_buffer PRIVATE
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/testing
)
add_test(NAME test_buffer COMMAND test_buffer)
set_tests_properties(test_buffer PROPERTIES LABELS "unit")

add_executable(test_types test_types.cc)
target_include_directories(test_types PRIVATE
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/testing
)
add_test(NAME test_types COMMAND test_types)
set_tests_properties(test_types PROPERTIES LABELS "unit")

add_executable(test_route_trie test_route_trie.cc)
target_link_libraries(test_route_trie rut_runtime)
target_include_directories(test_route_trie PRIVATE
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/testing
)
add_test(NAME test_route_trie COMMAND test_route_trie)
set_tests_properties(test_route_trie PROPERTIES LABELS "unit")

add_executable(test_route_hash_full test_route_hash_full.cc)
target_link_libraries(test_route_hash_full rut_runtime)
target_include_directories(test_route_hash_full PRIVATE
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/testing
)
add_test(NAME test_route_hash_full COMMAND test_route_hash_full)
set_tests_properties(test_route_hash_full PROPERTIES LABELS "unit")

add_executable(test_route_hash_first_seg test_route_hash_first_seg.cc)
target_link_libraries(test_route_hash_first_seg rut_runtime)
target_include_directories(test_route_hash_first_seg PRIVATE
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/testing
)
add_test(NAME test_route_hash_first_seg COMMAND test_route_hash_first_seg)
set_tests_properties(test_route_hash_first_seg PROPERTIES LABELS "unit")

add_executable(test_route_byte_radix test_route_byte_radix.cc)
target_link_libraries(test_route_byte_radix rut_runtime)
target_include_directories(test_route_byte_radix PRIVATE
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/testing
)
add_test(NAME test_route_byte_radix COMMAND test_route_byte_radix)
set_tests_properties(test_route_byte_radix PROPERTIES LABELS "unit")

add_executable(test_route_art test_route_art.cc)
target_link_libraries(test_route_art rut_runtime)
target_include_directories(test_route_art PRIVATE
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/testing
)
add_test(NAME test_route_art COMMAND test_route_art)
set_tests_properties(test_route_art PROPERTIES LABELS "unit")

add_executable(test_route_select test_route_select.cc)
target_link_libraries(test_route_select rut_runtime)
target_include_directories(test_route_select PRIVATE
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/testing
)
add_test(NAME test_route_select COMMAND test_route_select)
set_tests_properties(test_route_select PROPERTIES LABELS "unit")

add_executable(test_rir test_rir.cc ${PROJECT_SOURCE_DIR}/src/placement_new.cc)
target_link_libraries(test_rir rut_compiler)
target_include_directories(test_rir PRIVATE
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/testing
)
add_test(NAME test_rir COMMAND test_rir)
set_tests_properties(test_rir PROPERTIES LABELS "unit")

add_executable(test_frontend test_frontend.cc ${PROJECT_SOURCE_DIR}/src/placement_new.cc)
target_link_libraries(test_frontend rut_compiler)
target_include_directories(test_frontend PRIVATE
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/testing
)
add_test(NAME test_frontend COMMAND test_frontend)
set_tests_properties(test_frontend PROPERTIES LABELS "unit;compiler")

add_executable(test_drain test_drain.cc)
target_link_libraries(test_drain rut_runtime)
target_include_directories(test_drain PRIVATE
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/testing
    ${CMAKE_CURRENT_SOURCE_DIR}
)
add_test(NAME test_drain COMMAND test_drain)
set_tests_properties(test_drain PROPERTIES LABELS "unit")

add_executable(test_access_log test_access_log.cc)
target_link_libraries(test_access_log rut_runtime)
target_include_directories(test_access_log PRIVATE
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/testing
    ${CMAKE_CURRENT_SOURCE_DIR}
)
add_test(NAME test_access_log COMMAND test_access_log)
set_tests_properties(test_access_log PROPERTIES LABELS "unit")

add_executable(test_metrics test_metrics.cc)
target_link_libraries(test_metrics rut_runtime)
target_include_directories(test_metrics PRIVATE
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/testing
    ${CMAKE_CURRENT_SOURCE_DIR}
)
add_test(NAME test_metrics COMMAND test_metrics)
set_tests_properties(test_metrics PROPERTIES LABELS "unit")

add_executable(test_shard_control test_shard_control.cc)
target_link_libraries(test_shard_control rut_runtime Threads::Threads)
target_include_directories(test_shard_control PRIVATE
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/testing
    ${CMAKE_CURRENT_SOURCE_DIR}
)
add_test(NAME test_shard_control COMMAND test_shard_control)
set_tests_properties(test_shard_control PROPERTIES LABELS "unit")

add_executable(test_jit test_jit.cc ${PROJECT_SOURCE_DIR}/src/placement_new.cc)
target_link_libraries(test_jit rut_jit rut_compiler)
target_include_directories(test_jit PRIVATE
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/testing
    ${LLVM_INCLUDE_DIRS}
)
target_compile_definitions(test_jit PRIVATE ${LLVM_DEFINITIONS})
add_test(NAME test_jit COMMAND test_jit)
set_tests_properties(test_jit PROPERTIES LABELS "unit;jit")

add_executable(test_traffic_capture test_traffic_capture.cc)
target_link_libraries(test_traffic_capture rut_runtime Threads::Threads)
target_include_directories(test_traffic_capture PRIVATE
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/testing
    ${CMAKE_CURRENT_SOURCE_DIR}
)
add_test(NAME test_traffic_capture COMMAND test_traffic_capture)
set_tests_properties(test_traffic_capture PROPERTIES LABELS "unit")

add_executable(test_traffic_replay test_traffic_replay.cc)
target_link_libraries(test_traffic_replay rut_runtime)
target_include_directories(test_traffic_replay PRIVATE
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/testing
    ${CMAKE_CURRENT_SOURCE_DIR}
)
add_test(NAME test_traffic_replay COMMAND test_traffic_replay)
set_tests_properties(test_traffic_replay PROPERTIES LABELS "unit")

add_executable(test_sim test_sim.cc)
target_link_libraries(test_sim rut_runtime Threads::Threads)
target_include_directories(test_sim PRIVATE
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/testing
    ${CMAKE_CURRENT_SOURCE_DIR}
)
add_test(NAME test_sim COMMAND test_sim)
set_tests_properties(test_sim PROPERTIES LABELS "integration;sim")

add_executable(test_simulate_engine test_simulate_engine.cc)
add_dependencies(test_simulate_engine rut-simulate)
target_link_libraries(test_simulate_engine rut_simulate)
target_include_directories(test_simulate_engine PRIVATE
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/testing
    ${LLVM_INCLUDE_DIRS}
)
target_compile_definitions(test_simulate_engine PRIVATE ${LLVM_DEFINITIONS})
target_compile_definitions(test_simulate_engine PRIVATE
    RUT_SIMULATE_BIN_PATH="$<TARGET_FILE:rut-simulate>"
)
add_test(NAME test_simulate_engine COMMAND test_simulate_engine)
set_tests_properties(test_simulate_engine PROPERTIES LABELS "unit;sim;jit")

add_custom_target(check
    COMMAND $<TARGET_FILE:test_network>
    COMMAND $<TARGET_FILE:test_integration>
    COMMAND $<TARGET_FILE:test_arena>
    COMMAND $<TARGET_FILE:test_expected>
    COMMAND $<TARGET_FILE:test_http_parser>
    COMMAND $<TARGET_FILE:test_buffer>
    COMMAND $<TARGET_FILE:test_types>
    COMMAND $<TARGET_FILE:test_rir>
    COMMAND $<TARGET_FILE:test_frontend>
    COMMAND $<TARGET_FILE:test_drain>
    COMMAND $<TARGET_FILE:test_access_log>
    COMMAND $<TARGET_FILE:test_metrics>
    COMMAND $<TARGET_FILE:test_chunked_parser>
    COMMAND $<TARGET_FILE:test_shard_control>
    COMMAND $<TARGET_FILE:test_jit>
    COMMAND $<TARGET_FILE:test_traffic_capture>
    COMMAND $<TARGET_FILE:test_traffic_replay>
    COMMAND $<TARGET_FILE:test_sim>
    COMMAND $<TARGET_FILE:test_simulate_engine>
    COMMAND $<TARGET_FILE:test_route_trie>
    COMMAND $<TARGET_FILE:test_route_hash_full>
    COMMAND $<TARGET_FILE:test_route_hash_first_seg>
    COMMAND $<TARGET_FILE:test_route_byte_radix>
    COMMAND $<TARGET_FILE:test_route_art>
    COMMAND $<TARGET_FILE:test_route_select>
    DEPENDS test_network test_integration test_arena test_expected test_http_parser test_chunked_parser test_buffer test_types test_rir test_frontend test_drain test_access_log test_metrics test_shard_control test_jit test_traffic_capture test_traffic_replay test_sim rut-simulate test_simulate_engine test_route_trie test_route_hash_full test_route_hash_first_seg test_route_byte_radix test_route_art test_route_select
    COMMENT "Running all tests..."
)
